# src/swagger.json
@@ -498,6 +498,294 @@
 					}
 				}
 			}
+		},
+		"/post/get-all": {
+			"get": {
+				"summary": "Получение всех постов",
+				"description": "Получение списка всех постов",
+				"tags": ["Посты"],
+				"responses": {
+					"200": {
+						"description": "Успешное получение постов",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "array",
+									"items": {
+										"type": "object",
+										"properties": {
+											"id": {
+												"type": "integer"
+											},
+											"userId": {
+												"type": "integer"
+											},
+											"caption": {
+												"type": "string"
+											},
+											"mediaUrl": {
+												"type": "string"
+											},
+											"mediaType": {
+												"type": "string",
+												"enum": ["PHOTO", "VIDEO"]
+											},
+											"createdAt": {
+												"type": "string",
+												"format": "date-time"
+											},
+											"updatedAt": {
+												"type": "string",
+												"format": "date-time"
+											}
+										}
+									}
+								}
+							}
+						}
+					},
+					"500": {
+						"description": "Внутренняя ошибка сервера"
+					}
+				}
+			}
+		},
+		"/post/get-my": {
+			"get": {
+				"summary": "Получение постов текущего пользователя",
+				"description": "Получение списка постов, созданных текущим авторизованным пользователем",
+				"tags": ["Посты"],
+				"responses": {
+					"200": {
+						"description": "Успешное получение постов текущего пользователя",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "array",
+									"items": {
+										"type": "object",
+										"properties": {
+											"id": {
+												"type": "integer"
+											},
+											"userId": {
+												"type": "integer"
+											},
+											"caption": {
+												"type": "string"
+											},
+											"mediaUrl": {
+												"type": "string"
+											},
+											"mediaType": {
+												"type": "string",
+												"enum": ["PHOTO", "VIDEO"]
+											},
+											"createdAt": {
+												"type": "string",
+												"format": "date-time"
+											},
+											"updatedAt": {
+												"type": "string",
+												"format": "date-time"
+											}
+										}
+									}
+								}
+							}
+						}
+					},
+					"404": {
+						"description": "Пользователь не прошел проверку подлинности"
+					},
+					"500": {
+						"description": "Внутренняя ошибка сервера"
+					}
+				}
+			}
+		},
+		"/post/get-other/{id}": {
+			"get": {
+				"summary": "Получение постов другого пользователя",
+				"description": "Получение списка постов, созданных другим пользователем по его ID",
+				"tags": ["Посты"],
+				"parameters": [
+					{
+						"name": "id",
+						"in": "path",
+						"required": true,
+						"schema": {
+							"type": "integer"
+						},
+						"description": "ID пользователя"
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "Успешное получение постов другого пользователя",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "object",
+									"properties": {
+										"id": {
+											"type": "integer"
+										},
+										"userId": {
+											"type": "integer"
+										},
+										"caption": {
+											"type": "string"
+										},
+										"mediaUrl": {
+											"type": "string"
+										},
+										"mediaType": {
+											"type": "string",
+											"enum": ["PHOTO", "VIDEO"]
+										},
+										"createdAt": {
+											"type": "string",
+											"format": "date-time"
+										},
+										"updatedAt": {
+											"type": "string",
+											"format": "date-time"
+										}
+									}
+								}
+							}
+						}
+					},
+					"500": {
+						"description": "Внутренняя ошибка сервера"
+					}
+				}
+			}
+		},
+		"/post/create": {
+			"post": {
+				"summary": "Создание нового поста",
+				"description": "Создание нового поста с заголовком, URL медиа и типом медиа",
+				"tags": ["Посты"],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"type": "object",
+								"properties": {
+									"caption": {
+										"type": "string"
+									},
+									"mediaUrl": {
+										"type": "string"
+									},
+									"mediaType": {
+										"type": "string",
+										"enum": ["PHOTO", "VIDEO"]
+									}
+								},
+								"required": ["caption", "mediaUrl", "mediaType"]
+							}
+						}
+					}
+				},
+				"responses": {
+					"201": {
+						"description": "Пост успешно создан",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "object",
+									"properties": {
+										"id": {
+											"type": "integer"
+										},
+										"userId": {
+											"type": "integer"
+										},
+										"caption": {
+											"type": "string"
+										},
+										"mediaUrl": {
+											"type": "string"
+										},
+										"mediaType": {
+											"type": "string",
+											"enum": ["PHOTO", "VIDEO"]
+										},
+										"createdAt": {
+											"type": "string",
+											"format": "date-time"
+										},
+										"updatedAt": {
+											"type": "string",
+											"format": "date-time"
+										}
+									}
+								}
+							}
+						}
+					},
+					"400": {
+						"description": "Неверные данные"
+					},
+					"404": {
+						"description": "Пользователь не прошел проверку подлинности"
+					},
+					"500": {
+						"description": "Внутренняя ошибка сервера"
+					}
+				}
+			}
+		},
+		"/post/delete/{id}": {
+			"delete": {
+				"summary": "Удаление поста",
+				"description": "Удаление поста по его ID",
+				"tags": ["Посты"],
+				"parameters": [
+					{
+						"name": "id",
+						"in": "path",
+						"required": true,
+						"schema": {
+							"type": "integer"
+						},
+						"description": "ID поста"
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "Пост успешно удален",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "object",
+									"properties": {
+										"message": {
+											"type": "string"
+										}
+									}
+								}
+							}
+						}
+					},
+					"400": {
+						"description": "Идентификатор поста отсутствует"
+					},
+					"403": {
+						"description": "У вас нет прав для удаления этого поста"
+					},
+					"404": {
+						"description": "Пользователь не авторизован или пост не найден"
+					},
+					"500": {
+						"description": "Внутренняя ошибка сервера"
+					}
+				}
+			}
 		}
 	}
 }
